# NHN-diquest

./: Python_study.py  README.md  Study.py  docker_study.py  test.py
AI-tutorbot/tutorbot-auth-service/: Dockerfile  manage.py  pyproject.toml
AI-tutorbot/tutorbot-auth-service/misc/: const.py
AI-tutorbot/tutorbot-auth-service/students/: models.py  serializers.py  views.py
AI-tutorbot/tutorbot-auth-service/students/migrations/: 0001_initial.py
AI-tutorbot/tutorbot-auth-service/tutorbot_auth_service/: urls.py  wsgi.py
Style-profiling-pipeline/tools/ingestor-mlp/: pyproject.toml
Style-profiling-pipeline/tools/ingestor-mlp/ingestor/: command.py  config.py  const.py  database.py  main.py  schema.py  utils.py
Style-profiling-pipeline/tools/ingestor-mlp/schemas/: files.schema.yaml  k-fashion-dataset.schema.yaml  versioned_dataset.schema.yaml
Style-profiling-pipeline/tools/registerer-mlp/: pyproject.toml
Style-profiling-pipeline/tools/registerer-mlp/image-tagging-classifier-resnet101/: Dockerfile  inference.py  model.py  train.py
Style-profiling-pipeline/tools/registerer-mlp/image-tagging-classifier-resnet50/: dataset.py  image_tagging_classifier_handler.py  model.py  requirements.txt
Style-profiling-pipeline/tools/registerer-mlp/koelectra-base/: README.md  app.py  inference_argument.json  requirements.txt  train.py  train_argument.json  utils_fashion.py  utils_ner.py
Style-profiling-pipeline/tools/registerer-mlp/registerer/: config.py  database.py  model_register.py
Style-profiling-pipeline/tools/registerer-mlp/tests/: test_registerer.py
Style-profiling-pipeline/tools/registerer-mlp/yolov5/: Dockerfile  train.py  yolov5_handler.py
Style-profiling-pipeline/tools/tracking-server/: README.md  config.py  job.sh  mysql.py  pyproject.toml
Style-profiling/mlp-data-service/: README.md  manage.py  pyproject.toml
Style-profiling/mlp-data-service/annotations/: models.py  serializers.py  urls.py  views.py
Style-profiling/mlp-data-service/annotations/migrations/: 0001_initial.py
Style-profiling/mlp-data-service/bundles/: models.py  serializers.py  urls.py  views.py
Style-profiling/mlp-data-service/bundles/migrations/: 0001_initial.py
Style-profiling/mlp-data-service/datasets/: models.py  serializers.py  urls.py  views.py
Style-profiling/mlp-data-service/experiments/: models.py  serializers.py  urls.py  views.py
Style-profiling/mlp-data-service/files/: models.py  serializers.py  urls.py  views.py
Style-profiling/mlp-data-service/functions/: models.py  serializers.py  urls.py  views.py
Style-profiling/mlp-data-service/labels/: models.py  serializers.py  urls.py  views.py
Style-profiling/mlp-data-service/misc/: utils.py
Style-profiling/mlp-data-service/mlp_data_service/: asgi.py  settings.py  urls.py  wsgi.py
Style-profiling/mlp-data-service/models/: models.py  serializers.py  urls.py  views.py
Style-profiling/mlp-data-service/tensorboards/: apps.py  serializers.py  urls.py  views.py
Style-profiling/mlp-data-service/versioned_datasets/: apps.py  models.py  serializers.py  tasks.py  tests.py  urls.py  views.py
Style-profiling/rp-data-service/: README.md  manage.py  pyproject.toml
Style-profiling/rp-data-service/datasets/: models.py  serializers.py  urls.py  views.py
Style-profiling/rp-data-service/experiments/: models.py  serializers.py  urls.py  views.py
Style-profiling/rp-data-service/infer/: urls.py  views.py
Style-profiling/rp-data-service/misc/: query_string.py  response.py
Style-profiling/rp-data-service/models/: models.py  serializers.py  urls.py  views.py
Style-profiling/rp-data-service/rp_data_service/: asgi.py  settings.py  urls.py  wsgi.py
Style-profiling/rp-data-service/schedules/: apps.py  models.py  serializers.py  tasks.py  urls.py  views.py
Style-profiling/rp-runner/: README.md  pyproject.toml
Style-profiling/rp-runner/experiments_runner/: __main__.py  config.py  database.py  docker.py  job.py  loader.py  mlflow_api.py  orchestration.py  pipeline.py
Style-profiling/rp-runner/test/: config.py  database.py  pyproject.toml  test.json  test_best_model.py  test_loader.py  test_schedules.py  test_trainer.py
project-atlantis/scoring-service/: gunicorn.conf.py  gunicorn.service  manage.py  nginx.conf  pyproject.toml
project-atlantis/scoring-service/images/: models.py  urls.py
project-atlantis/scoring-service/infer/: models.py  serializers.py
project-atlantis/scoring-service/pages/: compiled_labeled_page.py  compiled_problems.py  models.py  serializers.py  urls.py
project-atlantis/scoring-service/schemas/: urls.py
project-atlantis/scoring-service/scoring_service/: asgi.py  urls.py  wsgi.py
project-atlantis/scoring-service/system/: urls.py
project-atlantis/scoring-service/workbooks/: models.py  serializers.py
(+422 files in other folders)
