[tool.poetry]
name = "rp-runner"
version = "0.8.1"
description = ""
authors = ["AI-선행기술개발팀 <ai-dev@diquest.com>"]

[tool.poetry.dependencies]
python = "~3.8"
APScheduler = "^3.8.1"
pytz = "^2021.3"
pymongo = "^3.12.1"
typer = "^0.4.0"
docker = "^5.0.3"
pandas = "^1.4.0"
mlflow = "^1.30.0"
pydash = "^5.1.1"
scikit-learn = "^1.1.3"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
