[tool.poetry]
name = "scoring-service"
version = "1.0.2"
description = ""
authors = ["AI-선행기술개발팀 <ai-dev@diquest.com>"]

[tool.poetry.dependencies]
python = "~3.8"
Django = "3.1.13"
djangorestframework = "^3.12.4"
django-cors-headers = "^3.11.0"
djongo = "^1.3.6"
pymongo = "^3.12.1"
fastjsonschema = "^2.16.1"
Pillow = "^9.2.0"
numpy = "^1.23.1"
opencv-python = "^4.6.0"
imutils = "^0.5.4"
scipy = "^1.9.0"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
