[tool.poetry]
name = "model-registerer"
version = "0.2.0-rc"
description = ""
authors = ["AI-선행기술개발팀 <ai-dev@diquest.com>"]

[tool.poetry.dependencies]
python = "~3.8"
typer-cli = "0.0.12"
pymongo = "~3.12"
fastjsonschema = "^2.15.1"
docker = "^5.0.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
