[tool.poetry]
name = "rp-runner"
version = "0.8.0"
description = ""
authors = ["AI-선행기술개발팀 <ai-dev@diquest.com>"]

[tool.poetry.dependencies]
python = "~3.8"
APScheduler = "^3.8.1"
pytz = "^2021.3"
pymongo = "^3.12.1"
Flask-SQLAlchemy = "^2.5.1"
pytest-shutil = "^1.7.0"
typer = "^0.4.0"
docker = "^5.0.3"
PyYAML = "^6.0"
opencv-python = "^4.5.5"
Pillow = "^9.0.0"
pandas = "^1.4.0"
pydash = "^5.1.0"
scikit-learn = "^1.1.3"
mlflow = "^1.30.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
